<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/explorer_menu"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/explorer"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/bookmark_menu"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/bookmark"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
</menu>