<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dark_tint_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoImage"
        app:layout_constraintStart_toStartOf="@+id/logoImage"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <ImageView
        android:id="@+id/airplaneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText"
        app:srcCompat="@drawable/line_airple_blue" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/fromBigText"
        app:layout_constraintEnd_toStartOf="@+id/airplaneImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/airplaneImage" />

    <TextView
        android:id="@+id/fromBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_sub"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/airplaneImage"
        app:layout_constraintEnd_toEndOf="@+id/fromText"
        app:layout_constraintStart_toStartOf="@+id/fromText"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@+id/toBigText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/airplaneImage"
        app:layout_constraintTop_toTopOf="@+id/airplaneImage" />

    <TextView
        android:id="@+id/toBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_sub"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/airplaneImage"
        app:layout_constraintEnd_toEndOf="@+id/toText"
        app:layout_constraintStart_toStartOf="@+id/toText"
        app:layout_constraintTop_toBottomOf="@+id/toText" />

    <ImageView
        android:id="@+id/dashLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        style="@style/dark_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airplaneImage"
        app:srcCompat="@drawable/dash_line" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashLine" />

    <ImageView
        android:id="@+id/seatClassImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashLine"
        app:srcCompat="@drawable/seat_blue" />

    <TextView
        android:id="@+id/seatClassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/flight_class_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seatClassImage"
        app:layout_constraintStart_toEndOf="@+id/seatClassImage"
        app:layout_constraintTop_toTopOf="@+id/seatClassImage" />
</androidx.constraintlayout.widget.ConstraintLayout>