<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TicketDetailActivity"
    style="@style/dark_background_color_ticket_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/blue_bg_bottom_corner"
                android:layout_height="135dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/world_half" />

                <ImageView
                    android:id="@+id/backButton_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/ticket_details"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/backButton_ticket"
                    app:layout_constraintStart_toEndOf="@+id/backButton_ticket"
                    app:layout_constraintTop_toTopOf="@+id/backButton_ticket" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="24dp"
                style="@style/dark_tint_background"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/logoImage"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/arrivalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/time"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/logoImage"
                        app:layout_constraintStart_toStartOf="@+id/logoImage"
                        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

                    <ImageView
                        android:id="@+id/airplaneImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arrivalText"
                        app:srcCompat="@drawable/line_airple_blue" />

                    <TextView
                        android:id="@+id/fromText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        app:layout_constraintBottom_toTopOf="@+id/fromBigText"
                        app:layout_constraintEnd_toStartOf="@+id/airplaneImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/airplaneImage" />

                    <TextView
                        android:id="@+id/fromBigText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_sub"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/airplaneImage"
                        app:layout_constraintEnd_toEndOf="@+id/fromText"
                        app:layout_constraintStart_toStartOf="@+id/fromText"
                        app:layout_constraintTop_toBottomOf="@+id/fromText" />

                    <TextView
                        android:id="@+id/toText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        app:layout_constraintBottom_toTopOf="@+id/toBigText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/airplaneImage"
                        app:layout_constraintTop_toTopOf="@+id/airplaneImage" />

                    <TextView
                        android:id="@+id/toBigText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_sub"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/airplaneImage"
                        app:layout_constraintEnd_toEndOf="@+id/toText"
                        app:layout_constraintStart_toStartOf="@+id/toText"
                        app:layout_constraintTop_toBottomOf="@+id/toText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fromTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/fromTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/date"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/dateTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/toTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/toTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/timeTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/time_caps"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/timeTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/dashDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line"
                    style="@style/dark_tint"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/flightClassText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/flight_class"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/flightClassTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/seatsText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/seats"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/seatsTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/airlineText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/airline"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/airlineTextDesciption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/priceTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/price_name"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/priceTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/QRCodeImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/qrcode" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/dashDivide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line"
                    style="@style/dark_tint"/>

                <ImageView
                    android:id="@+id/barCodeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    app:srcCompat="@drawable/barcode" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:background="@drawable/blue_bg"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/downloadTicketButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/download_ticket" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>